--- a/ProyectoFinalAplicadaI.csproj
+++ b/ProyectoFinalAplicadaI.csproj
@@ -78,5 +78,10 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="UI\Consultas\" />
+    <Folder Include="UI\Registros\" />
+    <Folder Include="UI\Reportes\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
