--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UsuariosBLL.CS" />
+    <Compile Include="UsuariosBLL.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
