--- a/ProyectoFinalAplicadaI.csproj
+++ b/ProyectoFinalAplicadaI.csproj
@@ -131,7 +131,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Resources\icons8-imprimir-30.png" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="Resources\New_File_36861%281%29.png" />
   </ItemGroup>
@@ -159,6 +161,12 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Printer-32x32.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\FA TODO.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
