--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BLL\ClienteTest.cs" />
+    <Compile Include="BLL\ArticuloTest.cs" />
     <Compile Include="BLL\UsuariosTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
