Programando Registro de Ventas

--- a/ProyectoFinalAplicadaI.csproj
+++ b/ProyectoFinalAplicadaI.csproj
@@ -133,6 +133,12 @@
       <DependentUpon>CrpUsuarios.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="UI\Reportes\CrpClientes.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CrpClientes.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="UI\Reportes\rReporteUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,6 +191,10 @@
     <EmbeddedResource Include="UI\Reportes\CrpUsuarios.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrpUsuarios.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Reportes\CrpClientes.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CrpClientes.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Reportes\rReporteUsuario.resx">
       <DependentUpon>rReporteUsuario.cs</DependentUpon>
