--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -51,7 +51,9 @@
     <Compile Include="ArticulosBLL.cs" />
     <Compile Include="ClientesBLL.cs" />
     <Compile Include="EntradaArticulosBLL.cs" />
+    <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositorio.cs" />
     <Compile Include="UsuariosBLL.cs" />
   </ItemGroup>
   <ItemGroup>
