--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -54,6 +54,7 @@
     <Compile Include="IRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositorio.cs" />
+    <Compile Include="RepositorioVentas.cs" />
     <Compile Include="UsuariosBLL.cs" />
   </ItemGroup>
   <ItemGroup>
