--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -56,8 +56,9 @@
     <Reference Include="System.Core" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLL\ArticulosTest.cs" />
     <Compile Include="BLL\ClienteTest.cs" />
-    <Compile Include="BLL\ArticuloTest.cs" />
+    <Compile Include="BLL\EntradaArticulosTest.cs" />
     <Compile Include="BLL\UsuariosTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
