--- a/ProyectoFinalAplicadaI.csproj
+++ b/ProyectoFinalAplicadaI.csproj
@@ -127,10 +127,10 @@
     <Compile Include="UI\Registros\rVentas.Designer.cs">
       <DependentUpon>rVentas.cs</DependentUpon>
     </Compile>
-    <Compile Include="UI\Reportes\CrpUsuarios.cs">
+    <Compile Include="UI\Reportes\CrpArticulos.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>CrpUsuarios.rpt</DependentUpon>
+      <DependentUpon>CrpArticulos.rpt</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="UI\Reportes\CrpClientes.cs">
@@ -138,6 +138,24 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>CrpClientes.rpt</DependentUpon>
       <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UI\Reportes\CrpUsuarios.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CrpUsuarios.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="UI\Reportes\rReporteArticulos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Reportes\rReporteArticulos.Designer.cs">
+      <DependentUpon>rReporteArticulos.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UI\Reportes\rReporteClientes.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UI\Reportes\rReporteClientes.Designer.cs">
+      <DependentUpon>rReporteClientes.cs</DependentUpon>
     </Compile>
     <Compile Include="UI\Reportes\rReporteUsuario.cs">
       <SubType>Form</SubType>
@@ -188,13 +206,23 @@
     <EmbeddedResource Include="UI\Registros\rVentas.resx">
       <DependentUpon>rVentas.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="UI\Reportes\CrpUsuarios.rpt">
+    <EmbeddedResource Include="UI\Reportes\CrpArticulos.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
-      <LastGenOutput>CrpUsuarios.cs</LastGenOutput>
+      <LastGenOutput>CrpArticulos.cs</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Reportes\CrpClientes.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>CrpClientes.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Reportes\CrpUsuarios.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>CrpUsuarios.cs</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Reportes\rReporteArticulos.resx">
+      <DependentUpon>rReporteArticulos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UI\Reportes\rReporteClientes.resx">
+      <DependentUpon>rReporteClientes.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UI\Reportes\rReporteUsuario.resx">
       <DependentUpon>rReporteUsuario.cs</DependentUpon>
